Update logo link and image in menu.html
cambiar ruta de imagne en el menu

--- a/Pagina/menu.html
+++ b/Pagina/menu.html
@@ -11,8 +11,8 @@
     <!-- BARRA SUPERIOR -->
     <header class="navbar">
         <div class="navbar-left">
-            <a href="index.html" class="logo">
-                <img src="img/logo.png" alt="Logo GreenCheck">
+            <a href="menu.html" class="logo">
+                <img src="img/Logo.png" alt="Logo GreenCheck">
                 <span>GreenCheck</span>
             </a>
         </div>
