--- a/Pagina/menu.html
+++ b/Pagina/menu.html
@@ -28,7 +28,7 @@
                 CERRAR SESION
             </button>
      
-            <button type="button" onclick="location.href='Panel.html'">
+            <button type="button" onclick="location.href='panel.html'">
                 ADMINISTAR USUARIOS
             </button>
         </div>
