git checkout --theirs Pagina/js/registro.js git add Pagina/js/registro.js git rebase --continue Agregar validaciones de email y password en registro y login, y eliminar registro dispositvos

--- a/Pagina/menu.html
+++ b/Pagina/menu.html
@@ -11,8 +11,8 @@
     <!-- BARRA SUPERIOR -->
     <header class="navbar">
         <div class="navbar-left">
-            <a href="index.html" class="logo">
-                <img src="img/logo.png" alt="Logo GreenCheck">
+            <a href="menu.html" class="logo">
+                <img src="img/Logo.png" alt="Logo GreenCheck">
                 <span>GreenCheck</span>
             </a>
         </div>
@@ -20,15 +20,12 @@
         <h1 class="navbar-title">SISTEMA DE RIEGO AUTOMÁTICO</h1>
 
         <div class="navbar-right">
-            <button type="button" onclick="location.href='RegistroDispositivos.html'">
-                MIS DISPOSITIVOS
-            </button>
 
             <button type="button" onclick="location.href='login.html'">
                 CERRAR SESION
             </button>
      
-            <button type="button" onclick="location.href='Panel.html'">
+            <button type="button" onclick="location.href='panel.html'">
                 ADMINISTAR USUARIOS
             </button>
         </div>
